<resources>
    <string name="app_name">StillValid</string>
    <string name="logo">Image</string>
    <string name="sv">www.StillValid.com</string>
    <string name="ap">Ajouter un produit</string>
    <string name="ar">Ajouter un article</string>
    <string name="bo">Boutique</string>
    <string name="rep">reparateur</string>
    <string name="txt">text</string>
    <string name="ca">Mes Contrats et Abonnements</string>
    <string name="assurance">ASSURANCE SANTE</string>
    <string name="pr">Mes Produits</string>
    <string name="me">Menu</string>
    <string name="re">Mes Reminders</string>
    <string name="ac">Accueil</string>
    <string name="tr"> Trouver réparateur</string>
    <string name="va">Valider</string>
    <string name="cc">Crée un Compte</string>
    <string name="caa">choissisez une catégoire</string>
    <string name="da">DEPOSER UNE ANNONCE</string>
    <string name="pp">Photo Produit :</string>
    <string name="c">Categorie :</string>
    <string name="ta">Titre de annonce :</string>
    <string name="www">Description de annonce :</string>
    <string name="w">Description de annonce</string>
    <string name="taa">  Titre de annonce</string>
    <string name="p">PRIX :</string>
    <string name="acc">Ajouter un contrat</string>
    <string name="v">Veuillez choisir le type du contrat </string>
    <string name="e">Effacer</string>
    <string name="aj">AJOUTER UN CONTRAT</string>
    <string name="vs">Veuillez choisir la date échéance</string>
    <string name="ph">Prendre une photo du contrat</string>
    <string name="pa">Prendre une photo de Article</string>
    <string name="ih">Importer une photo du Contrat</string>
    <string name="ia">Prendre une photo de Facture</string>
    <string name="ree">Récapitulatif</string>
    <string name="Ty">Type :</string>
    <string name="de">Date échéance : </string>
    <string name="phh">Photos :</string>
    <string name="ve">Veuillez choisir enseigne de achat</string>
    <string name="vm">Veuillez choisir la marque</string>
    <string name="vp">Veuillez saisir le nom du produit</string>
    <string name="vdd"> Veuillez choisir la date achat</string>
    <string name="ee">Enseigne de achat :</string>
    <string name="ma">Marque :</string>
    <string name="prr">Produit :</string>
    <string name="d">Date achat :</string>
    <string name="daa">Durée de la garantie :</string>
    <string name="vv">Ville</string>
    <string name="vg">Veuillez saisir la durée de la garantie</string>
    <string name="te">Télévision</string>
    <string name="x">Voir la facture</string>
    <string name="vc">Voir le Contrat</string>
    <string name="mois">6 Mois</string>
</resources>
