<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ContentDescription"
    android:background="#D9D9D9"
    tools:context=".recapitulatife_Produit">

    <EditText
        android:id="@+id/editText6"
        android:layout_width="382dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginBottom="7dp"
        android:background="@drawable/edit_round"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/textView24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="382dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:background="@drawable/edit_round"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/textView25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="382dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:background="@drawable/edit_round"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/textView23"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="382dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginBottom="7dp"
        android:background="@drawable/edit_round"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/textView28"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="382dp"
        android:layout_height="140dp"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/edit_round"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginStart="103dp"
        android:layout_marginLeft="103dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="210dp"
        android:layout_marginRight="210dp"
        android:layout_marginBottom="685dp"
        android:size="10sp"
        android:text="@string/ac"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="140dp"
        android:layout_marginRight="140dp"
        android:layout_marginBottom="685dp"
        android:size="16sp"
        android:text="@string/me"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="95dp"
        android:layout_marginRight="95dp"
        android:layout_marginBottom="8dp"
        android:text="@string/ree"
        android:textSize="17sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/textView27"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="467dp"
        android:background="@color/cardview_shadow_start_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20"
        app:layout_constraintVertical_bias="0.0"></View>

    <TextView
        android:id="@+id/textView27"
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="95dp"
        android:layout_marginRight="95dp"
        android:text="@string/ee"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/editText11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <EditText
        android:id="@+id/editText11"
        android:layout_width="382dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginBottom="9dp"
        android:background="@drawable/edit_round"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/textView26"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="95dp"
        android:layout_marginRight="95dp"
        android:text="@string/ma"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/editText6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText11" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="95dp"
        android:layout_marginRight="95dp"
        android:text="@string/prr"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/editText7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText6" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="95dp"
        android:layout_marginRight="95dp"
        android:text="@string/d"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/editText9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText7" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="95dp"
        android:layout_marginRight="95dp"
        android:text="@string/daa"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/editText8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText9" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="95dp"
        android:layout_marginRight="95dp"
        android:layout_marginBottom="8dp"
        android:text="@string/phh"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/editText10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText8" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/valid2"
        app:layout_constraintHorizontal_bias="0.766"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText5"
        app:layout_constraintVertical_bias="0.216"
        app:srcCompat="@drawable/left" />

    <Button
        android:id="@+id/valid2"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="149dp"
        android:layout_marginEnd="108dp"
        android:layout_marginRight="108dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_round"
        android:text="@string/va"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

</android.support.constraint.ConstraintLayout>