<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ContentDescription"
    android:background="#D9D9D9"
    tools:context=".Boutique">
    <ImageView
        android:id="@+id/still_valid"
        android:layout_width="168dp"
        android:layout_height="48dp"
        android:layout_marginStart="67dp"
        android:layout_marginLeft="67dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="67dp"
        android:layout_marginRight="67dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="155dp"
        android:layout_height="40dp"
        android:layout_marginStart="130dp"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="130dp"
        android:layout_marginRight="130dp"
        android:layout_marginBottom="628dp"
        android:text="@string/bo"
        android:textColor="#FA8258"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/still_valid" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="57dp"
        android:layout_height="45dp"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/home_button" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="60dp"
        android:layout_height="26dp"
        android:layout_marginStart="130dp"
        android:layout_marginLeft="130dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="531dp"
        android:size="10sp"
        android:text="@string/ac"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="57dp"
        android:layout_height="45dp"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="156dp"
        android:layout_marginRight="156dp"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/menu_button" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginEnd="139dp"
        android:layout_marginRight="139dp"
        android:layout_marginBottom="527dp"
        android:size="16sp"
        android:text="@string/me"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

</android.support.constraint.ConstraintLayout>